<resources>
    <string name="app_name">OmniCoders</string>
    <string name="logo">Welcome to OmniCoders</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="log_in">Log in</string>
    <string name="text_acc">Don\'t have an account?</string>
    <string name="signup">Sign up</string>
    <string name="logout">Logout</string>
    <string name="change_theme">Change Theme</string>
    <string name="language_option">Language Option</string>
    <string name="amharic">Amharic</string>
    <string name="english">English</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="change_language">Change Language</string>
    <string name="change_password">Change Password</string>
    <string name="change">Change</string>
    <string name="cancel">Cancel</string>
    <string name="daynight_theme">DAYNIGHT THEME</string>
    <string name="daylight_theme">DAYLIGHT THEME</string>
    <string name="default_theme">DEFAULT THEME</string>
    <string name="email">Email</string>
    <string name="full_name">Full Name</string>
    <string name="fill_form">/* Fill the following forms and click signup */</string>

    <string-array name="level">
        <item>Beginner </item>
        <item>Intermediate</item>
        <item>Associate</item>
        <item>Advanced</item>
    </string-array>
    <string name="title_activity_drawer_menu">DrawerMenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>


</resources>
