<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@color/colorGreen"
        android:gravity="center"
        android:scaleType="center"
        android:text="@string/change_language"
        android:textColor="@color/colorWhite"
        android:textSize="24dp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/radioLang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <RadioButton
            android:id="@+id/radioAm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/amharic" />

        <RadioButton
            android:id="@+id/radioEn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/english" />
    </RadioGroup>
</LinearLayout>